...
            value = code_input,
            onValueChange = {
                if (it.length <= 6 && it.all { char -> char.isDigit() }) {
                    code_input = it
                }
            },
            label = { Text("Enter 6-digit code") },
            singleLine = true,
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number), //only takes numerical input
            modifier = modifier.padding(4.dp),
            colors = TextFieldDefaults.outlinedTextFieldColors(
                containerColor = Color.White,
            ),
        )
        button_common("Join Session", onClick = {
            if (code_input.length == 6) {

                firebaseAccess.get_from_reference(databaseRef.child(code_input), callback = { snapshot ->
                    val newUser = user( //create a new user
                        userId = userdata.user_ID.value.toString(),
                        username = userdata.Username.value.toString()
...
                                CoroutineScope(Dispatchers.Main).launch{
                                    snackbar.showSnackbar("Failed to Join Session - Connection Issue")
                                }
                            })
                    } else {
                        CoroutineScope(Dispatchers.Main).launch{
                            snackbar.showSnackbar("Failed to Join Session - Code Invalid")
                        }
                    }
                })
            } else {
                CoroutineScope(Dispatchers.Main).launch{
                    snackbar.showSnackbar("Code must be 6 digits long")
                }
            }

        } )
    }
}
...
